--- a/views/artist.phtml
+++ b/views/artist.phtml
@@ -22,7 +22,56 @@
 			<? endforeach ?>
 			</ul>
 		<? endif ?>
+		<? if (count($artist->genres)): ?>
+			<ul class="social" style="width: 34px; float: right;">
+			<? foreach ($artist->genres as $genre): ?>
+				<li><a target="_blank" href="/genre/<?= $genre->key ?>"><img alt="<?= ucfirst($genre->name) ?>" title="<?= ucfirst($genre->name) ?>" src="/img/social/<?= $genre->name ?>.png" border="0" /></a></li>
+			<? endforeach ?>
+			</ul>
+		<? endif ?>
 		<div class="clear"></div>
+		<? if (count($artist->crews)): ?>
+			<div class="container crews-small">
+				<div class="span12">
+					<p>
+						<strong><?= $artist->name ?> is member of the following crews</strong>
+						<ul class="thumbnails">
+							<? foreach ($artist->crews as $crew): ?>
+								<li class="span2">
+									<div class="thumbnail">
+										<a data-method="async" title="<?= $artist->name ?> is a member of <?= $crew->name ?>" href="/artist/<?= $crew->key ?>">
+										<img width="100" src="/img/artists/<?= $crew->key ?>.jpg" border="0" alt="<?= $crew->name ?>"></a>
+										<p><?= $crew->name ?></p>
+									</div>
+								</li>
+							<? endforeach ?>
+						</ul>
+					</p>
+				</div>
+			</div>
+		<? endif ?>
+		<? if (count($artist->members)): ?>
+			<div class="container members-small">
+				<div class="span12">
+					<p>
+						<strong><?= $artist->name ?>Consists of the following members</strong>
+						<ul class="thumbnails">
+							<? foreach ($artist->members as $member): ?>
+								<li class="span2">
+									<div class="thumbnail">
+										<a data-method="async" title="<?= $member->name ?> is a member of <?= $artist->name ?>" href="/artist/<?= $member->key ?>">
+											<img width="100" src="/img/artists/<?= $member->key ?>.jpg" border="0" alt="<?= $member->name ?>">
+											<br/>
+											<span class="artist-name"><?= $member->name ?></span>
+										</a>
+									</div>
+								</li>
+							<? endforeach ?>
+						</ul>
+					</p>
+				</div>
+			</div>
+		<? endif ?>
     </div>
 </div>
 <? if (count($artist->events)): ?>
