--- a/views/genre.phtml
+++ b/views/genre.phtml
@@ -1,14 +1,44 @@
 <?= ViewLoader::load('breadcrumb', array('items' => $breadcrumb)) ?>
 <div class="container">
     <div class="hero-unit">
-        <h1><?= $genre->name ?></h1>
-        <p><?= $genre->shortInfo ?></p>
-		<? if (isset($genre->longInfo)): ?>
-			<p><?= $genre->longInfo ?></p>
+        <h1>
+        	<?= $genre->name ?>
+        	<? if (null !== $genre->altName): ?>
+        		<span style="font-weight: normal; font-size: 32pt;">(<?= $genre->altName ?>)</span>
+        	<? endif ?>
+        </h1>
+		<? if (!empty($genre->description)): ?>
+			<p><?= $genre->description ?></p>
 		<? endif ?>
+		<div class="container">
+			<? if (count($genre->subgenres)): ?>
+				<div class="span4">
+					<p>
+						<strong>Subgenres:</strong>
+						<ul>
+							<? foreach ($genre->subgenres AS $subgenre): ?>
+							<li><a data-method="async" href="/genre/<?= $subgenre->key ?>"><?= $subgenre->name?></a></li>
+							<? endforeach ?>
+						</ul>
+					</p>
+				</div>
+			<? endif ?>
+			<? if (count($genre->superiors)): ?>
+				<div class="span4">
+					<p>
+						<strong>Superior Genres:</strong>
+						<ul>
+							<? foreach ($genre->superiors AS $superior): ?>
+							<li><a data-method="async" href="/genre/<?= $superior->key ?>"><?= $superior->name?></a></li>
+							<? endforeach ?>
+						</ul>
+					</p>
+				</div>
+			<? endif ?>
+		</div>
     </div>
 </div>
-<? if (isset($genre->soundcloud)): ?>
+<? if (!empty($genre->soundcloud)): ?>
 	<div class="container">
 		<h2>Tracks</h2>
 		<iframe width="100%" height="700" scrolling="no" frameborder="no" src="<?= $genre->soundcloud ?><?= DataProvider::getInstance()->getSoundcloudParams() ?>"></iframe>
