--- a/views/home.phtml
+++ b/views/home.phtml
@@ -17,21 +17,12 @@
 			<div class="box_skitter box_skitter_large" style="margin-left: 10px;">
 				<ul>
 					<li>
-						<img src="/img/releases/3886inlove-800x300.jpg">
+						<a target="_blank" href="http://www.beatport.com/release/lite-prog/1448930"><img src="/img/releases/spekta-liteprog-800x300.jpg"></a>
 						<div class="label_text">
-							<p>Official Ruhr-in-Love Afterparty</p>
+							<p>Spekta - Lite Prog</p>
 							<div>
-								Thirtyeight Eightysix Labelnight #3 <a href="https://www.facebook.com/events/612196595516881" target="_blank">on Facebook</a>
-							</div>
-						</div>
-					</li>
-					<li>
-						<img src="/img/releases/zwielicht-shadowplay-800x300.jpg">
-						<div class="label_text">
-							<p>Zwielicht - Shadowplay EP</p>
-							<div>
-								Listen to the mix for free on <a target="_blank" href="http://mixcloud.com/3886records/zwielicht-shadowplay-ep/">MixCloud</a><br/>
-								Now available on <a href="http://www.beatport.com/release/shadowplay-ep/1235597" target="_blank">Beatport</a>
+								Listen to the Preview Mix on <a target="_blank" href="https://www.mixcloud.com/3886records/spekta-lite-prog-ep-promotional-mix/">MixCloud</a><br/>
+								Download the complete EP on <a data-method="async" href="http://www.beatport.com/release/lite-prog/1448930">BeatPort</a><br/>
 							</div>
 						</div>
 					</li>
@@ -42,6 +33,16 @@
 							<div>
 								Listen to the Preview Mix for free on <a target="_blank" href="https://x.mixcloud.com/3886records/psybuddy-amrita-ep/">MixCloud</a><br/>
 								Now available on <a target="_blank" href="http://www.beatport.com/release/amrita-ep/1223416">Beatport</a>
+							</div>
+						</div>
+					</li>
+					<li>
+						<img src="/img/releases/zwielicht-shadowplay-800x300.jpg">
+						<div class="label_text">
+							<p>Zwielicht - Shadowplay EP</p>
+							<div>
+								Listen to the mix for free on <a target="_blank" href="http://mixcloud.com/3886records/zwielicht-shadowplay-ep/">MixCloud</a><br/>
+								Now available on <a href="http://www.beatport.com/release/shadowplay-ep/1235597" target="_blank">Beatport</a>
 							</div>
 						</div>
 					</li>
