--- a/views/404.phtml
+++ b/views/404.phtml
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="hero-unit">
-        <? if (true === $displayException): ?>
+        <? if (isset($displayException) && true === $displayException): ?>
             <h1>EXCEPTION</h1>
         	<p><strong><?= $exception->getMessage() ?></strong></p>
         	<? foreach ($exception->getTrace() as $step): ?>
