--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -6,14 +6,19 @@
 <? if (isset($metaTitle)): ?>
 <title><?= $metaTitle ?> - 3886records</title>
 <? else: ?>
-<title>3886records - Finest electronic music</title>
+<title>3886records - Finest Psychedelic Music</title>
 <? endif ?>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Thirtyeight Eightysix Records is an independant record label for electronic dance music established by Spekta in 2012.">
 <meta name="keywords" content="3886, 3886rec., 3886rec, 3886 Records, Goa, Trance, Progressive Trance, Psychedelic Trance, Psytrance, Goatrance, Thirtyeight Eightysix">
 <meta name="author" content="3886records">
-<meta property="og:image" content="<?= isset($facebookImage) ? $facebookImage : 'http://www.3886records.de/img/3886logo.png' ?>" />
-<meta property="og:description" content="<?= isset($facebookDescription) ? $facebookDescription : 'Finest Electronic Music' ?>" />
+<meta property="og:title" content="<?= isset($metaTitle) ? $metaTitle : 'Finest Psychedelic Music' ?>" />
+<? if (isset($facebookImage) && !empty($facebookImage)): ?>
+<meta property="og:image" content="<?= $facebookImage ?>" />
+<? endif ?>
+<? if (isset($facebookDescription) && !empty($facebookDescription)): ?>
+<meta property="og:description" content="<?= $facebookDescription ?>" />
+<? endif ?>
 <!-- the styles -->
 <link href="/css/supersized.css" rel="stylesheet" media="screen">
 <link rel="stylesheet" href="/theme/supersized.shutter.css" type="text/css" media="screen" />
@@ -25,6 +30,7 @@
 <link href="/css/font-awesome.css" rel="stylesheet">
 <link href="/css/ui/jquery-ui-1.10.3.custom.css" rel="stylesheet">
 <link type="text/css" href="/css/skitter.styles.css" media="all" rel="stylesheet" />
+<link type="text/css" rel='stylesheet' href='/css/fullcalendar.min.css' />
 <!--[if IE 7]>
     <link rel="stylesheet" href="/css/font-awesome-ie7.min.css">
     <![endif]-->
@@ -98,6 +104,8 @@
 <script src="/js/jquery-ui-1.10.3.custom.js"></script>
 <script src="/js/jquery.animate-colors-min.js"></script>
 <script src="/js/jquery.skitter.min.js"></script>
+<script src='/js/moment.js'></script>
+<script src='/js/fullcalendar.min.js'></script>
 <script>    
      jQuery(window).load(function() { 
         jQuery('.spinner').animate({'opacity':0},500,'easeOutCubic',function (){jQuery(this).css('display','none')});  
