--- a/views/navigation.phtml
+++ b/views/navigation.phtml
@@ -1,8 +1,10 @@
 <ul class="nav pull-right">
-  
+
+  <li class="dropdown"><a data-method="async" href="/pics"><span><i class="icon-film"></i></span> Gallery</b></a></li>  
   <li class="divider-vertical"></li>
   
-  <li><a href="/events" data-method="async"><span class="current"><i class="icon-calendar"></i></span> Events</a></li>
+  <li><a href="/events" data-method="async"><span><i class="icon-calendar"></i></span> Events</a></li>
+  <li class="divider-vertical"></li>
   
   <?php /*
   <li class="divider-vertical"></li>
@@ -15,7 +17,7 @@
   <li class="divider-vertical"></li>
   */ ?>
 
-  <li class="dropdown"><a href="/artists" class="dropdown-toggle" data-toggle="dropdown"><span class="current"><i class="icon-star"></i></span> Artists <b class="caret"></b></a>
+  <li class="dropdown"><a href="/artists" class="dropdown-toggle" data-toggle="dropdown"><span><i class="icon-star"></i></span> Artists <b class="caret"></b></a>
     <ul class="dropdown-menu">
       <li><a data-method="async" href="/artists">Artist overview</a></li>
       <li class="divider"></li>
@@ -26,7 +28,7 @@
   </li>
   <li class="divider-vertical"></li>
 
-  <li class="dropdown"><a href="/artists" class="dropdown-toggle" data-toggle="dropdown"><span class="current"><i class="icon-star"></i></span> DJs <b class="caret"></b></a>
+  <li class="dropdown"><a href="/djs" class="dropdown-toggle" data-toggle="dropdown"><span><i class="icon-star"></i></span> DJs <b class="caret"></b></a>
     <ul class="dropdown-menu">
       <li><a data-method="async" href="/djs">DJ overview</a></li>
       <li class="divider"></li>
@@ -35,17 +37,21 @@
     <? endforeach ?>
     </ul>
   </li>
-  <li class="divider-vertical"></li>
 
-  <li class="dropdown"><a href="/artists" class="dropdown-toggle" data-toggle="dropdown"><span class="current"><i class="icon-music"></i></span> Genres <b class="caret"></b></a>
-    <ul class="dropdown-menu">
+
+  
+  <li class="divider-vertical"></li>
+  <li class="dropdown"><a data-method="async" href="/genres"><span><i class="icon-music"></i></span> Genres</b></a>
+    <!--<ul class="dropdown-menu">
 	  <? foreach ($genres as $genre): ?>
 		<li><a data-method="async" href="/genre/<?= $genre->key ?>"><?= $genre->name ?></a></li>
 	  <? endforeach ?>
     </ul>
+    -->
   </li>
-  <li class="divider-vertical"></li>
 
+  <?/*
+  <li class="divider-vertical"></li>
   <li class="dropdown"><a href="/artists" class="dropdown-toggle" data-toggle="dropdown"><span class="current"><i class="icon-headphones"></i></span> Labels <b class="caret"></b></a>
     <ul class="dropdown-menu">
 	  <? foreach ($labels as $label): ?>
@@ -53,5 +59,6 @@
 	  <? endforeach ?>
     </ul>
   </li>
+  */?>
 
 </ul>
