--- a/views/home.phtml
+++ b/views/home.phtml
@@ -17,22 +17,22 @@
 			<div class="box_skitter box_skitter_large" style="margin-left: 10px;">
 				<ul>
 					<li>
-						<a target="_blank" href="http://www.beatport.com/release/lite-prog/1448930"><img src="/img/releases/spekta-liteprog-800x300.jpg"></a>
+						<a target="_blank" href="//x.mixcloud.com/3886records/psybuddy-amrita-ep/"><img src="/img/releases/psybuddy-amrita-ep-800x300.jpg"></a>
 						<div class="label_text">
-							<p>Spekta - Lite Prog</p>
+							<p>PsyBuddy - Amrita EP</p>
 							<div>
-								Listen to the Preview Mix on <a target="_blank" href="https://www.mixcloud.com/3886records/spekta-lite-prog-ep-promotional-mix/">MixCloud</a><br/>
-								Download the complete EP on <a data-method="async" href="http://www.beatport.com/release/lite-prog/1448930">BeatPort</a><br/>
+								Listen to the Preview Mix for free on <a target="_blank" href="//x.mixcloud.com/3886records/psybuddy-amrita-ep/">MixCloud</a><br/>
+								Now available on <a target="_blank" href="//www.beatport.com/release/amrita-ep/1223416">Beatport</a>
 							</div>
 						</div>
 					</li>
 					<li>
-						<a target="_blank" href="https://x.mixcloud.com/3886records/psybuddy-amrita-ep/"><img src="/img/releases/psybuddy-amrita-ep-800x300.jpg"></a>
+						<a target="_blank" href="//www.beatport.com/release/lite-prog/1448930"><img src="/img/releases/spekta-liteprog-800x300.jpg"></a>
 						<div class="label_text">
-							<p>PsyBuddy - Amrita EP</p>
+							<p>Spekta - Lite Prog</p>
 							<div>
-								Listen to the Preview Mix for free on <a target="_blank" href="https://x.mixcloud.com/3886records/psybuddy-amrita-ep/">MixCloud</a><br/>
-								Now available on <a target="_blank" href="http://www.beatport.com/release/amrita-ep/1223416">Beatport</a>
+								Listen to the Preview Mix on <a target="_blank" href="//www.mixcloud.com/3886records/spekta-lite-prog-ep-promotional-mix/">MixCloud</a><br/>
+								Download the complete EP on <a data-method="async" href="//www.beatport.com/release/lite-prog/1448930">BeatPort</a><br/>
 							</div>
 						</div>
 					</li>
@@ -41,27 +41,18 @@
 						<div class="label_text">
 							<p>Zwielicht - Shadowplay EP</p>
 							<div>
-								Listen to the mix for free on <a target="_blank" href="http://mixcloud.com/3886records/zwielicht-shadowplay-ep/">MixCloud</a><br/>
-								Now available on <a href="http://www.beatport.com/release/shadowplay-ep/1235597" target="_blank">Beatport</a>
+								Listen to the mix for free on <a target="_blank" href="//mixcloud.com/3886records/zwielicht-shadowplay-ep/">MixCloud</a><br/>
+								Now available on <a href="//www.beatport.com/release/shadowplay-ep/1235597" target="_blank">Beatport</a>
 							</div>
 						</div>
 					</li>
 					<li>
-						<a target="_blank" href="http://www.beatport.com/release/introspection/1190765"><img src="/img/releases/cosmicchuen-introspection-800x300.jpg"></a>
+						<a target="_blank" href="//www.beatport.com/release/introspection/1190765"><img src="/img/releases/cosmicchuen-introspection-800x300.jpg"></a>
 						<div class="label_text">
 							<p>Cosmic Chuen - Introspection EP</p>
 							<div>
-								Listen to the mix for free on <a target="_blank" href="http://www.youtube.com/watch?v=mHoSaWuMbKI">YouTube</a><br/>
-								Get the EP or single tracks on <a target="_blank" href="http://www.beatport.com/release/introspection/1190765">Beatport</a>
-							</div>
-						</div>
-					</li>
-					<li>
-						<img src="/img/releases/sherwee-mbira-800x300.jpg">
-						<div class="label_text">
-							<p>Sherwee - Mbira</p>
-							<div>
-								Get the Single on <a target="_blank" href="http://www.beatport.com/track/mbira-original-mix/4858854">Beatport</a>
+								Listen to the mix for free on <a target="_blank" href="//www.youtube.com/watch?v=mHoSaWuMbKI">YouTube</a><br/>
+								Get the EP or single tracks on <a target="_blank" href="//www.beatport.com/release/introspection/1190765">Beatport</a>
 							</div>
 						</div>
 					</li>
@@ -70,7 +61,7 @@
 						<div class="label_text">
 							<p>CannaBliss - Spykedelic EP</p>
 							<div>
-								Get the EP or single tracks on <a target="_blank" href="http://www.beatport.com/release/spykedelic-ep/1145036">Beatport</a>
+								Get the EP or single tracks on <a target="_blank" href="//www.beatport.com/release/spykedelic-ep/1145036">Beatport</a>
 							</div>
 						</div>
 					</li>
@@ -79,7 +70,7 @@
 						<div class="label_text">
 							<p>Spirtualzune - Psychedelic Spirit EP</p>
 							<div>
-								Get the EP or single tracks on <a target="_blank" href="http://www.beatport.com/release/psychedelic-spirit-ep/1135736">Beatport</a>
+								Get the EP or single tracks on <a target="_blank" href="//www.beatport.com/release/psychedelic-spirit-ep/1135736">Beatport</a>
 							</div>
 						</div>
 					</li>
@@ -87,44 +78,36 @@
 			</div>
 		</div>
 		<div class="span3">
-			<div style="height: 330px;">
-				<a href="/bookings" data-method="async"><img src="/img/bookings.jpg" border="0">
-			</div>
+    		<div class="row">
+            	<div class="span3 box">
+            		<h4>Newsletter</h4>
+            		<p style="color: black">
+            			Don't miss any release and get limited promotional offers!
+            			<form method="post" action="/subscriptions">
+            				<input name="email" type="email" placeholder="E-Mail Address" /><br/>
+            				<input type="submit" class="btn" value="Subscribe now">
+            			</form>
+            		</p>
+            	</div>
+            </div>
+            <div class="row">
+            	<div class="span3 box">
+            		<h4>Bookings</h4>
+            		<p>
+            			<form method="get" action="/bookings">
+            				<input type="submit" class="btn" value="Get your party started">
+            			</form>
+            		</p>
+            	</div>
+            </div>
 		</div>
 	</div>
 </div>
 
 <?/*
-<div class="container blocks">
-	<div class="span4 backgrounded">
-		<h4>Subscribe to newsletter</h4>
-		<p>
-			Don't miss any release and get limited promotional offers!
-			<form method="post" action="/subscriptions">
-				<input name="email" type="email" placeholder="E-Mail Address" /><br/>
-				<input type="submit" class="btn" value="Subscribe now">
-			</form>
-		</p>
-	</div>
-	<div class="span4 backgrounded">
-		<h4>Subscribe to newsletter</h4>
-		<p>
-			Don't miss any release and get limited promotional offers!
-			<form method="post" action="/subscriptions">
-				<input name="email" type="email" placeholder="E-Mail Address" /><br/>
-				<input type="submit" class="btn" value="Subscribe now">
-			</form>
-		</p>
-	</div>
-	<?/*<div class="span4 backgrounded">
-		<h4>Send your Demo!</h4>
-		<p>
-			We're looking for talented artists in the genres Trance, Goa, House and Chillout. We are listening to every submitted sound!
-		</p>
-		<a target="_blank" href='http://soundcloud.com/3886records/dropbox' class='soundcloud-dropbox'>Send us your track!</a>
-	</div>
-</div>
+
 */?>
+
 <div class="container home">
 	<div class="span4 first backgrounded">
 			<h4>Upcoming releases</h4>
@@ -176,10 +159,10 @@
 			<? endforeach ?>
 	</div>
 	<div class="span5">
-		<iframe width="100%" height="1000" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Fplaylists%2F4623566%3Fsecret_token%3Ds-EkFxj&amp;color=007aff&amp;auto_play=true&amp;show_artwork=false"></iframe>
+		<iframe width="100%" height="1000" scrolling="no" frameborder="no" src="//w.soundcloud.com/player/?url=https%3A%2F%2Fapi.soundcloud.com%2Fplaylists%2F4623566%3Fsecret_token%3Ds-EkFxj&amp;color=007aff&amp;auto_play=true&amp;show_artwork=false"></iframe>
 	</div>
 	<div class="span3">
-		<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
-		<a class="twitter-timeline"  href="https://twitter.com/3886records" height="1000" data-widget-id="336446706327625729">Tweets by @3886records</a>
+		<script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
+		<a class="twitter-timeline"  href="//twitter.com/3886records" height="1000" data-widget-id="336446706327625729">Tweets by @3886records</a>
 	</div>
 </div>
