--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -83,7 +83,7 @@
   <div id="controls-wrapper" class="load-item">
     <div class="container">
       <div id="controls"> 
-        <div id="credits_footer"><small>3886records ©2013</div>
+        <div id="credits_footer"><small>3886records ©<?= date('Y') ?></div>
         <div id="social"><small> Follow us: </small>
 			<a class="facebook tooltips" data-container="body" data-placement="top" data-trigger="hover" data-title="Facebook" target="_blank" href="http://www.facebook.com/3886records"><i class="icon-facebook-sign icon-large"></i></a>
 			<a class="twitter tooltips" data-container="body" data-placement="top" data-trigger="hover" data-title="Twitter" target="_blank" href="http://www.twitter.com/3886records"><i class="icon-twitter-sign icon-large"></i></a>
