--- a/views/navigation.phtml
+++ b/views/navigation.phtml
@@ -57,7 +57,11 @@
   <? else: ?>
     <li class="dropdown"><a href="/profile" class="dropdown-toggle" data-toggle="dropdown"><span><i class="icon-user"></i></span> Profile <b class="caret"></b></a>
       <ul class="dropdown-menu">
-        <li><a data-method="async" href="/profile">My profile</a></li>
+        <li><a data-method="async" href="/profile">My Profile</a></li>
+        <li><a data-method="async" href="/profile/edit">Edit Profile</a></li>
+        <? if ($user->rights == 1): ?>
+          <li><a data-method="async" href="/profile/signupcodes">Signup Codes</a></li>
+        <? endif ?>
         <li><a href="/logout">Logout</a></li>
       </ul>
     </li>
